--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <link href="main.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
+          integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 </head>
 <body>
-
+<div class="nav">
+    <label for="toggle"><i class="fas fa-list-ul"></i></label>
+    <input type="checkbox" id="toggle">
+</div>
+<div class="menu">
+    <a href="#">Business</a>
+    <a href="#">Services</a>
+    <a href="#">Learn more</a>
+    <a href="#"><span>Free Trial</span></a>
 </body>
 </html>
