--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <div class="nav">
     <label for="toggle"><i class="fas fa-list-ul"></i></label>
     <input type="checkbox" id="toggle">
+
+    <div class="menu">
+        <a href="#">Business</a>
+        <a href="#">Services</a>
+        <a href="#">Learn more</a>
+        <a href="#"><span>Free Trial</span></a>
+    </div>
 </div>
-<div class="menu">
-    <a href="#">Business</a>
-    <a href="#">Services</a>
-    <a href="#">Learn more</a>
-    <a href="#"><span>Free Trial</span></a>
 </body>
 </html>
